Moving didactor tags